=== Deluge 1.3.0 (In Development) ===
==== Core ====
  * Implement #1063 option to delete torrent file copy on torrent removal - patch from Ghent
  * Implement #457 progress bars for folders
  * #496: Remove deprecated functions in favour of get_session_status()

=== Deluge 1.2.0 (In Development) ===
==== Core ====
  * Implement new RPC protocol DelugeRPC replacing XMLRPC
  * Move to a twisted framework
  * Add an 'Error' filter for Trackers to show trackers that currently have a tracker error
  * Use system GeoIP database if available, this is now an optional dependency

==== GtkUI ====
  * Remove SignalReceiver
  * Implemented a cross-platform IPC method thus removing the DBUS dependency
  * Implement a "True" Classic Mode where there is no longer a separate daemon process
  * Add preferences option "Add torrent in paused state"
  * Add tracker icons to the Tracker column
  * Implement #259 show tooltip with country name in the peers tab
  * Add an error category to the tracker sidebar list
  * Add Find More Plugins button to Plugins preference page
  * Fix #518 remove header in add torrent dialog to save vertical space
  * Add a Cache preferences page to adjust cache settings and examine cache status
  * Add ability to rename files prior to adding them
  * Fix shutdown handler with GNOME session manager
  * Allow 4 MiB piece sizes when creating a torrent

==== ConsoleUI ====
  * Changed to use curses for a more interactive client

==== WebUI ====
  * Move over to using Twisted-Web for the webserver.
  * Move to only AJAX interface built upon Ext-JS.

==== Plugins ====
  * Add Scheduler plugin
  * Add Extractor plugin

==== Misc ====
  * PyGTK dependency bumped to => 2.12 to use new tooltip system
  * Add new scripts for invoking UIs: deluge-gtk, deluge-web, deluge-console
  * Remove GeoIP database from the source tree

=== Deluge 1.1.0 - "Time gas!" (10 January 2009) ===
==== Core ====
  * Implement #79 ability to change outgoing port range